# saleslog

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  production-smoke.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 426f933c296d_initial_schema.py  9b1f6e2c4a10_agent_workflow.py  d2f4a7c9b8e1_agent_run_active_unique_index.py
backend/app/: agent_worker.py  auth.py  authz.py  db.py  deps.py  enums.py  export_openapi.py  link_user.py  main.py  models.py  schemas.py  seed.py  settings.py  sqlalchemy_result.py  timeutil.py
backend/app/agent/: __init__.py  approval.py  citations.py  evaluation.py  events.py  faults.py  llm.py  output_schema.py  search.py  text.py  worker.py  worker_queue.py
backend/app/routers/: agent_runs.py  customers.py  dashboard.py  users.py  visits.py
backend/tests/: conftest.py  test_agent.py  test_agent_evaluation.py  test_app.py  test_auth.py  test_authz.py  test_customers.py  test_dashboard.py  test_demo_read_only.py  test_migrations.py  test_seed.py  test_sqlalchemy_result.py  test_users.py  test_visits.py
docs/: agent-architecture.md  agent-evaluation.md  agent-security.md  agent-workflow.md  demo-environment.md  spec.md  verification.md
docs/assets/: saleslog-demo.webm
docs/decisions/: 0001-role-source-of-truth-in-db.md  0002-human-approval-for-agent-actions.md  README.md  (+4 more)
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.toml
(+99 files in other folders)
